<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.detail.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lyt_detail_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/img_photo"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:scaleType="fitXY"
                android:src="@android:color/darker_gray"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_toEndOf="@id/img_photo"
                android:text="@string/name_movies"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/img_photo"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/img_photo" />

            <TextView
                android:id="@+id/txt_year_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_name"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/img_photo"
                android:text="@string/lorem"
                app:layout_constraintLeft_toRightOf="@id/img_photo"
                app:layout_constraintTop_toBottomOf="@id/txt_name" />

            <TextView
                android:id="@+id/txt_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_year_rating"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/img_photo"
                android:text="@string/director"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/img_photo"
                app:layout_constraintTop_toBottomOf="@id/txt_year_rating" />

            <TextView
                android:id="@+id/txt_director_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_director"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/img_photo"
                app:layout_constraintLeft_toRightOf="@id/img_photo"
                app:layout_constraintTop_toBottomOf="@id/txt_director"
                tools:text="Bambang Jiwa" />

            <TextView
                android:id="@+id/txt_screenplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_director_name"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/img_photo"
                android:text="@string/screenplay"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/img_photo"
                app:layout_constraintTop_toBottomOf="@id/txt_director_name" />

            <TextView
                android:id="@+id/txt_screenplay_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_screenplay"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/img_photo"
                app:layout_constraintLeft_toRightOf="@id/img_photo"
                app:layout_constraintTop_toBottomOf="@id/txt_screenplay"
                tools:text="Bambang Jiwa" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lyt_detail_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/txt_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/cast_movie"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_cast_1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:scaleType="fitXY"
                android:src="@android:color/darker_gray"
                app:layout_constraintDimensionRatio="3:3.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/img_cast_2"
                app:layout_constraintTop_toBottomOf="@id/txt_cast"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt_cast_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="marquee"
                android:maxLines="2"
                android:textAlignment="center"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/img_cast_1"
                app:layout_constraintRight_toRightOf="@id/img_cast_1"
                app:layout_constraintTop_toBottomOf="@id/img_cast_1"
                tools:text="Bambang" />

            <ImageView
                android:id="@+id/img_cast_2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:scaleType="fitXY"
                android:src="@android:color/darker_gray"
                app:layout_constraintDimensionRatio="3:3.5"
                app:layout_constraintLeft_toRightOf="@id/img_cast_1"
                app:layout_constraintRight_toLeftOf="@id/img_cast_3"
                app:layout_constraintTop_toBottomOf="@id/txt_cast"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt_cast_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="marquee"
                android:maxLines="2"
                android:textAlignment="center"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/img_cast_2"
                app:layout_constraintRight_toRightOf="@id/img_cast_2"
                app:layout_constraintTop_toBottomOf="@id/img_cast_2"
                tools:text="Bambang" />

            <ImageView
                android:id="@+id/img_cast_3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:scaleType="fitXY"
                android:src="@android:color/darker_gray"
                app:layout_constraintDimensionRatio="3:3.5"
                app:layout_constraintLeft_toRightOf="@id/img_cast_2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_cast"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt_cast_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="marquee"
                android:maxLines="2"
                android:textAlignment="center"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/img_cast_3"
                app:layout_constraintRight_toRightOf="@id/img_cast_3"
                app:layout_constraintTop_toBottomOf="@id/img_cast_1"
                tools:text="Bambang" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txt_detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/lorem" />

        <TextView
            android:id="@+id/txt_language_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/language"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            tools:text="English" />

        <TextView
            android:id="@+id/txt_runtime_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/runtime"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            tools:text="2h 16m" />

    </LinearLayout>

</ScrollView>
